# ot-harjoitustyo

./: .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: matkakortti.md  monopoli.md
src/: audio_player.py  main.py  project.py  project_persistence.py
src/tests/: test_audio_player.py  test_project.py
src/tests/integration/: test_project_and_audio.py
src/tests/unit/: test_audio_player.py  test_project.py  test_project_persistence.py
