[tool.poetry]
name = "soittokone"
version = "0.0.1"
description = "a musical accompaniment app"
authors = ["fallmx <31561277+fallmx@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pyside6 = "^6.7.0"
sounddevice = "^0.4.6"
soundfile = "^0.12.1"
numpy = "^1.26.4"
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
autopep8 = "^2.1.0"
coverage = "^7.4.4"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
